# mercury

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  build.rs  sdkconfig.defaults
src/: demo.rs  dht22.rs  lib.rs  main.rs  mqtt.rs  wifi.rs
