[package]
name = "mercury"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[target.xtensa-esp32-espidf.dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
esp-idf-sys = { version = "0.30.3", features = ["binstart"] }
#esp-idf-svc = { version = "0.36.9", features = ["experimental"] }
esp-idf-svc = { git = "https://github.com/galenguyer/esp-idf-svc", branch = "mac", features = ["experimental"] }
esp-idf-hal = { version = "0.32.9", features = ["experimental"] }
embedded-svc = { version = "0.16", features = ["experimental"] }
embedded-hal = "0.2"
hex = "0.4.3"

[build-dependencies]
embuild = "0.28"
anyhow = "1"
