[package]
name = "mercury"
version = "1.0.0"
authors = ["Galen Guyer <galen@galenguyer.com>"]
edition = "2021"
license = "MIT"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[target.xtensa-esp32-espidf.dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
embedded-hal = "0.2.7"
embedded-svc = { version = "0.17.3", features = ["experimental"] }
esp-idf-hal = { version = "0.33.1", features = ["experimental"] }
esp-idf-sys = { version = "0.30.6", features = ["binstart"] }
#esp-idf-svc = { version = "0.36.9", features = ["experimental"] }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc", rev = "a741662c", features = ["experimental"] }
hex = "0.4.3"

[build-dependencies]
embuild = "0.28"
anyhow = "1"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
